# fall-watch

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  fall-watch.code-workspace  pyproject.toml
scripts/: setup_roi.py
src/fall_watch/: camera.py  climb_watcher.py  config.py  detector.py  fall_watcher.py  main.py  notifier.py
tests/: test_camera.py  test_detector.py  test_frame.py  test_telegram.py
